--- a/admin-riders.html
+++ b/admin-riders.html
@@ -609,7 +609,7 @@
         let searchTerm = '';
 
         // URL de tu Apps Script
-        const APPS_SCRIPT_URL = 'TU_URL_DE_APPS_SCRIPT_AQUI';
+        const APPS_SCRIPT_URL = 'https://script.google.com/macros/s/AKfycbz2bq-R1ey5d9kfnR4W5COBI4q82utzLoSY94qNB4JlOmyPXaBt6QtCxwLzZ7hVd9V2HQ/exec';
 
         async function loadApplications() {
             try {
