--- a/admin-riders.html
+++ b/admin-riders.html
@@ -753,7 +753,7 @@
             return 'Revisar requisitos';
         }
             if (!url || url.includes('Error') || url === 'No proporcionada') {
-                return '';
+                return "";
             }
             
             // Si es Cloudinary, usar transformación para thumbnail
