--- a/rider.html
+++ b/rider.html
@@ -479,7 +479,7 @@
                 </div>
 
                 <div class="form-group">
-                    <label>Foto de tu Licencia <span class="required">*</span></label>
+                    <label>Foto de tu Licencia (Si no tienes sube foto de la cedula)<span class="required">*</span></label>
                     <div class="file-upload-container">
                         <div class="file-upload-box" id="uploadBoxLicencia">
                             <div class="upload-icon">🪪</div>
