Update APPS_SCRIPT_URL to new deployment URL

--- a/rider.html
+++ b/rider.html
@@ -647,7 +647,7 @@
         // ========================================
         const CLOUDINARY_CLOUD_NAME = 'drkaxsziu';
         const CLOUDINARY_UPLOAD_PRESET = 'somar_riders';
-        const APPS_SCRIPT_URL = 'TU_URL_DE_DEPLOYMENT_AQUI'; // ← CAMBIAR ESTO
+        const APPS_SCRIPT_URL = 'https://script.google.com/macros/s/AKfycbzUKpHXJucHFaNj6skQyEyUR0uO_k0fSu7i7g2GOkLlsKRDKY4ke4fRHrFs7B_XncSAtw/exec'; // ← CAMBIAR ESTO
 
         // ========================================
         // ALMACENAMIENTO DE URLs
